[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/textures/gothicvania patreon collection/night-town-background-files/night-town-background-preview-LOW-RES.jpg" type="Texture" id=1]
[ext_resource path="res://characters/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/FireSkulllSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://MenuLayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/HorseSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/HoundSpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://BossFight.gd" type="Script" id=8]
[ext_resource path="res://ObstacleSpawner.tscn" type="PackedScene" id=9]

[node name="World2" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 502, 299.5 )
scale = Vector2( 1.96094, 2.67411 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 240 )

[node name="FireSkullSpawner" parent="." instance=ExtResource( 3 )]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="MenuLayer" parent="." instance=ExtResource( 4 )]

[node name="HorseSpawner" parent="." instance=ExtResource( 6 )]

[node name="HoundSpawner" parent="." instance=ExtResource( 7 )]

[node name="ObstacleSpawner" parent="." instance=ExtResource( 9 )]
